--- a/covid.ipynb
+++ b/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
     "import bs4\n",
     "import re\n",
     "import json\n",
-    "#from apscheduler.schedulers.blocking import BlockingScheduler\n",
+    "from apscheduler.schedulers.blocking import BlockingScheduler\n",
     "import logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,120 +87,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res=get_data(base_url)"
+    "def job():\n",
+    "    try:\n",
+    "        currtime = time.localtime()\n",
+    "        date=time.strftime('%Y-%m-%d',currtime)\n",
+    "        res=get_data(base_url)\n",
+    "        res.to_csv('stopkv_data%s.csv'%date,index=False)\n",
+    "        data=pd.read_csv('stopkv_data.csv')\n",
+    "        data=data.append(res, sort=False)\n",
+    "        log(data.shape)\n",
+    "        data.to_csv('stopkv_data.csv',index=False)\n",
+    "    except IOError as e:\n",
+    "        log('%s error '%(e))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>name</th>\n",
-       "      <th>sick</th>\n",
-       "      <th>healed</th>\n",
-       "      <th>died</th>\n",
-       "      <th>date_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>Москва</td>\n",
-       "      <td>7822</td>\n",
-       "      <td>350</td>\n",
-       "      <td>50</td>\n",
-       "      <td>По состоянию на 10 апреля 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>Московская область</td>\n",
-       "      <td>930</td>\n",
-       "      <td>66</td>\n",
-       "      <td>13</td>\n",
-       "      <td>По состоянию на 10 апреля 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>Санкт-Петербург</td>\n",
-       "      <td>408</td>\n",
-       "      <td>43</td>\n",
-       "      <td>4</td>\n",
-       "      <td>По состоянию на 10 апреля 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>Республика Коми</td>\n",
-       "      <td>208</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>По состоянию на 10 апреля 10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-04-10</td>\n",
-       "      <td>Ленинградская область</td>\n",
-       "      <td>129</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>По состоянию на 10 апреля 10:30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date                   name  sick healed died  \\\n",
-       "0  2020-04-10                 Москва  7822    350   50   \n",
-       "1  2020-04-10     Московская область   930     66   13   \n",
-       "2  2020-04-10        Санкт-Петербург   408     43    4   \n",
-       "3  2020-04-10        Республика Коми   208      1    3   \n",
-       "4  2020-04-10  Ленинградская область   129      3    0   \n",
-       "\n",
-       "                         date_text  \n",
-       "0  По состоянию на 10 апреля 10:30  \n",
-       "1  По состоянию на 10 апреля 10:30  \n",
-       "2  По состоянию на 10 апреля 10:30  \n",
-       "3  По состоянию на 10 апреля 10:30  \n",
-       "4  По состоянию на 10 апреля 10:30  "
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res.head()"
+    "job()\n",
+    "scheduler = BlockingScheduler()\n",
+    "scheduler.add_job(job, 'interval', hours=24, misfire_grace_time=4)\n",
+    "scheduler.start()"
    ]
   },
   {
@@ -209,15 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('stopkv_data%s.csv'%date,index=False)"
+    "#res.to_csv('stopkv_data%s.csv'%date,index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
